--- a/mainPage.html
+++ b/mainPage.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Andrew's Website</title>
 </head>
 <body>
-    
+    <h1>Andrew's Website</h1>
+    <a href="./wwr/index.html">River Rafting</a>
+    <a href="./wwr/site-plan-rafting.html">Site Plan</a>
 </body>
 </html>
