--- a/wwr/index.html
+++ b/wwr/index.html
@@ -60,6 +60,7 @@
         <h3>Dry Oar &copy; 2022 - Andrew Gerber</h3>
         <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
         <h3><a href="contactus.html">Contact Us</a></h3>
+        <h3><a href="/wwr/site-plan-rafting.html">Site Plan</a></h3>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
