--- a/mainPage.html
+++ b/mainPage.html
@@ -10,5 +10,6 @@
     <h1>Andrew's Website</h1>
     <a href="./wwr/index.html">River Rafting</a>
     <a href="./wwr/site-plan-rafting.html">Site Plan</a>
+    <a href="/Inclass Activity/positioning.html">Positioning</a>
 </body>
 </html>
