--- a/mainPage.html
+++ b/mainPage.html
@@ -11,5 +11,6 @@
     <a href="./wwr/index.html">River Rafting</a>
     <a href="./wwr/site-plan-rafting.html">Site Plan</a>
     <a href="/Inclass Activity/positioning.html">Positioning</a>
+    <a href="./PersonalWebsite/siteplan.html">Personal Website Siteplan</a>
 </body>
 </html>
