--- a/PersonalWebsite/siteplan.html
+++ b/PersonalWebsite/siteplan.html
@@ -134,31 +134,46 @@
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
-      <p>
-        [Written copy for the home page here]
+      <h3>Home</h3>
+      <p>-	Featured Games
+        This section will contain images that features games that can be played and purchased at the store. A description beneath the image will give details about the game. The description will include: what year it was released, what platform it is available on, how many people can play it, and a brief summary of the game itself. In a more completed website, different games would be displayed after a certain point of time, about every week or few days.
+        There will be three smaller images that display average games, and one large image that displays an iconic first-party title. There will be a link to a stream of this bigger game in its description.
+        
       </p>
+      <p>-	Deals
+        Some games will have announced deals on the homesite. There will be discounts on games that are already being featured. The section for deals will be beneath the games being displayed. In the section, there will be images of current bundle deals, including consoles and games. This will display how much money is actually being saved.
+        This section will also advertise that games and consoles can be rented for a brief period. More information will also tell the viewers games and consoles rented from the store can be used, and saved if rented multiple times, to a discount to the full price of the game and/or console if they wish to purchase said item. 
+        </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="./images/home_big.jpg" alt="image for homepage">
+        <img src="./images/animal_crossing.jpg" alt="image for homepage">
+        <img src="./images/pokemon.jpg" alt="image for homepage">
+        <img src="./images/zelda.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Streaming</h3>
       <p>
-        [Written copy for the Page 2 here]
+        -	Stream Gameplay
+In this page, there will be a video where viewers can watch recorded gameplay of certain games. On the right side of the page, there will be a list of games that can be also be viewed. Clicking on these games will change the video on the page. There will be a small image for each game that will display the cover art of the game. However, this specific feature will not be added yet for simplistic sake, as this is only the demo.
+Beneath the video that can be played, it will give a description of the game. There will also be a link to the player’s manual in the description. This description will have a “show more” feature that will hide the full description, to save room on the page. Beneath the description there will be official ratings and reviews for the game from certain sources (like IGN or Metacritic, etc.).
+
       </p>
+      <p>A personal review of the game will also be given beneath the ratings by the owner the store for parents and the general public. It will be an express opinion what the game’s overall message and intended audience. A recommended age limit will be given and reasons for such will be given.</p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="./images/BotW_Switch.jpg" alt="image for page">
+        <img src="./images/Mario_GBA (1).jpg" alt="image for page">
+        <img src="./images/Poke_GB.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Events and Ordering</h3>
       <p>
-        [Written copy for the Page 3 here]
+        On this third page, a calendar will be displayed that will show upcoming events during the current month. These events will include sales events, tournaments, and party events with group games. The different events on the calendar can be enlarged when clicked on, and a longer description of the event can be viewed. This feature will probably not be used in the demo of the page.
       </p>
+      <p>The contact for the business can be viewed on the footer in each page, which will include the phone number and email. A message can be expected to be responded to within twenty-four hours.</p>
+      <p>Beneath the calendar, there will be a section where viewers will be able to order games and have them shipped to them. There will be a forum that will ask for: Name, Phone Number, Address, Form of Purchase, and which product they are buying. Once they fill out the form, the forum will send the customer confirmation that their order has been made. The status of the order will then be texted to the customer, when it has been shipped, it’s expected arrival, and when it has been delivered. This may not be included in the demo of the website. </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="./images/shipping.jpg" alt="image for page3">
+        <img src="./images/game_events.jpg" alt="image for page3">
 
       </ul>
       <hr>
