--- a/mainPage.html
+++ b/mainPage.html
@@ -12,5 +12,6 @@
     <a href="./wwr/site-plan-rafting.html">Site Plan</a>
     <a href="/Inclass Activity/positioning.html">Positioning</a>
     <a href="./PersonalWebsite/siteplan.html">Personal Website Siteplan</a>
+    <a href="/Inclass Activity/contactus.html">Contact Us</a>
 </body>
 </html>
