--- a/mainPage.html
+++ b/mainPage.html
@@ -12,6 +12,7 @@
     <a href="./wwr/site-plan-rafting.html">Site Plan</a>
     <a href="/Inclass Activity/positioning.html">Positioning</a>
     <a href="./PersonalWebsite/siteplan.html">Personal Website Siteplan</a>
+    <a href="./PersonalWebsite/home.html">Personal Site</a>
     
 </body>
 </html>
